--- a/ValidationTest.html
+++ b/ValidationTest.html
@@ -80,6 +80,12 @@
             </div>
         </div>
 
+        <br />
+
+        <div class="row">
+            <div class="col-md-12 alert alert-info" id="outputPanel" />
+        </div>
+
     </form>
 
 </body>
