--- a/ValidationTest.html
+++ b/ValidationTest.html
@@ -16,7 +16,7 @@
 
         <h2>Contact Details</h2>
 
-        <div class="row" id="contactDetailsSection">
+        <div class="row" id="contactDetailsSection" data-validation-model="contact">
             <div class="col-md-offset-1 col-md-10">
                 <table class="table table-striped">
                     <tr>
@@ -47,7 +47,7 @@
 
         <h2>Delivery Address</h2>
 
-        <div class="row" id="deliveryAddressSection">
+        <div class="row" id="deliveryAddressSection" data-validation-model="deliveryAddress">
             <div class="col-md-offset-1 col-md-10">
                 <table class="table table-striped">
                     <tr>
@@ -76,6 +76,8 @@
 
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
+                <button type="button" class="btn btn-sm pull-right" id="clearBtn">Clear fields</button>
+                <button type="button" class="btn btn-sm pull-right" id="resetBtn">Reset validator</button>
                 <button type="submit" class="btn btn-sm btn-primary pull-right">Submit</button>
             </div>
         </div>
