--- a/ValidationTest.html
+++ b/ValidationTest.html
@@ -78,7 +78,7 @@
             <div class="col-md-offset-3 col-md-6">
                 <button type="button" class="btn btn-sm pull-right" id="clearBtn">Clear fields</button>
                 <button type="button" class="btn btn-sm pull-right" id="resetBtn">Reset validator</button>
-                <button type="submit" class="btn btn-sm btn-primary pull-right">Submit</button>
+                <button type="submit" class="btn btn-sm btn-primary pull-right" id="submitBtn">Submit</button>
             </div>
         </div>
 
